# Factory-ui-v2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start-lan.ps1  start.ps1  start.sh
.claude/agents/: dev.md  final-user.md
.claude/commands/: factory.md  idea-to-app.md  improve-loop.md
.claude/skills/: ship-fully-automated-ship-workflow.md
.github/workflows/: ci.yml
Docs/: 00-index.md  01-project-management.md  02-project-ide.md  03-run-execution.md  04-run-history.md  05-library-browser.md  06-library-import.md  07-git-panel.md  08-worktrees.md  09-github-integration.md  10-cockpit.md  11-settings.md  12-code-review.md  13-app-shell.md  14-devops-init.md  v2-architecture.md  v2-launch-panel-ux.md
backend/: main.py
backend/routers/: claude_import.py  code_review.py  git.py  github.py  library.py  projects.py  run.py  runs.py  settings.py  system.py  worktrees.py
backend/schemas/: code_review.py  library.py  project.py  run.py  settings.py  worktree.py
backend/services/: claude_cli.py  claude_folder_scanner.py  claude_session_service.py  code_review_service.py  git_service.py  github_service.py  library_service.py  process_manager.py  project_service.py  prompt_detector.py  pty_backend.py  run_history_service.py  run_output_service.py  settings_service.py  stream_json_parser.py  worktree_service.py
backend/tests/: conftest.py  (+13 more)
frontend/: eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+88 files in other folders)
